# niri_window_buttons

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: compositor.rs  global.rs  icons.rs  lib.rs  notifications.rs  screen.rs  settings.rs  styles.css  system.rs  widget.rs
src/notifications/: pid_cache.rs
